--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "todolist for learn typescript",
   "main": "index.ts",
   "scripts": {
-    "start": "npm-run-all -p scss build serve",
+    "start": "npm-run-all -p scss webpack serve",
     "scss": "sass --watch src/styles.scss:public/styles.css --no-source-map",
     "build": "tsc --watch",
+    "webpack": "webpack --config webpack.config.js",
     "serve": "lite-server -c bs-config.json",
     "test": "jest"
   },
@@ -21,6 +22,9 @@
     "npm-run-all": "^4.1.5",
     "sass": "^1.62.1",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.82.0",
+    "webpack-cli": "^5.1.0"
   }
 }
