--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/jest": "^29.5.1",
     "@types/node": "^20.1.0",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-localstorage-mock": "^2.4.26",
     "lite-server": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.62.1",
