--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/tests/*.test.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
